<resources>
    <string name="app_name">Commoner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="regist_phone_text">手机号</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="regist_checkcode_text">验证码</string>
    <string name="regist_placeholder">一</string>
    <string name="regist_password_text">密码</string>
    <string name="regist_password_text_new">新密码</string>
    <string name="regist_password_text_confirm">确认密码</string>
    <string name="regist_read_check_text"> 已阅读同意</string>
    <string name="regist_agreement">《用户服务协议》</string>
    <string name="regist_submit">确认注册</string>
    <string name="regist_submit_reset">重置密码</string>
    <string name="regist_get_code">获取验证码</string>
    <string name="regist_code_hint"><font size="12">请输入短信验证码</font></string>
    <string name="regist_password_hint"><font size="12">请输入6~18位数字或英文字母</font></string>
</resources>
