<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chenpan.commoner.imchat.ui.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <RelativeLayout
        android:id="@+id/item_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/regist_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:text="@string/regist_phone_text"/>

        <Button
            android:id="@+id/regist_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_organge"
            android:gravity="center"
            android:text="@string/regist_get_code"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/regist_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/regist_send_code"
            android:layout_toRightOf="@id/placeholder_phone"
            android:background="@color/white"
            android:hint="@string/login_phone_hint"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/placeholder_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/regist_phone_text"
            android:background="@color/white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/item_phone"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/regist_checkcode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/regist_checkcode_text"/>

        <TextView
            android:id="@+id/placeholder_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/regist_checkcode_text"
            android:background="@color/white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/regist_checkcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/placeholder_phone_code"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regist_code_hint"
            android:inputType="number"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_code"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/regist_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/regist_password_text"/>

        <TextView
            android:id="@+id/placeholder_phone_pw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/regist_password_text"
            android:background="@color/white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/placeholder_phone_pw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/placeholder_phone_pw1"
            android:background="@color/white"
            android:text="@string/regist_placeholder"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/placeholder_phone_pw2"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regist_password_hint"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_password"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/regist_password_text_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/regist_password_text_confirm"/>

        <EditText
            android:id="@+id/regist_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regist_password_text_confirm"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regist_password_hint"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_phone"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_code"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_password2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:height="1px"
        android:background="@color/cal_line_grey"/>



    <Button
        android:id="@+id/regist_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_organge"
        android:text="@string/regist_submit"
        android:textColor="@color/white"/>

</RelativeLayout>
